fixed: non-visible line once shared tab been selected

--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,6 @@ label {
    border-collapse: collapse;
    margin: 0 auto;
    margin-top: -1px;
-   position: relative;
    z-index: 0;
 }
 
